#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(cairo-ftk, 0.1, xianjimli@hotmail.com)
AC_CONFIG_SRCDIR([src/cairo-ftk-surface.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(cairo-ftk,0.1)

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.
PKG_CHECK_MODULES(FTK, "ftk pixman-1",, AC_MSG_RESULT(no))
PKG_CHECK_MODULES(CAIRO, "cairo",, AC_MSG_RESULT(no))

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
