lib_LTLIBRARIES=libcairo-ftk.la
libcairo_ftk_la_SOURCES=cairo-ftk-surface.c
libcairo_ftk_la_CFLAGS=@FTK_CFLAGS@ @CAIRO_CFLAGS@
libcairo_ftk_la_LDFLAGS=@FTK_LIBS@ @CAIRO_LIBS@

noinst_PROGRAMS=demo1
demo1_SOURCES=demo1.c
demo1_CFLAGS=@FTK_CFLAGS@ @CAIRO_CFLAGS@
demo1_LDFLAGS=@FTK_LIBS@ @CAIRO_LIBS@ 

